# kyuhachi-data

./: .gitignore  CLAUDE.md  README.md  decisions.json  pyproject.toml
.github/: CATALOG_AUTOMATION.md  PULL_REQUEST_TEMPLATE.md  catalog-prep-prompt.md
data/: area-id-map.json  area-regions.json  area_guides_curated.json  hours_curated.json  onsen-id-map.json  readings_curated.json  snapshot.db
docs/: area-guides-content-review.md  area-guides-schema.md  hours-schema.md  onsen-schema.md  roadmap.md
onsen_scraper/: __init__.py  fees.py  fetcher.py  hours.py  hours_report.py  mapseed.py  parser.py  readings.py  regions.py
publisher/: apply.py  backfill_area_id.py  backfill_data_verified_at.py  backfill_fees.py  backfill_images.py  backfill_name_kana.py  backfill_name_romaji.py  backfill_schedule.py  decisions.example.json  firestore_rest.py  image_processor.py  publish_area_guides.py
route_planning/: .gitignore  README.md  analyze_handdrawn.py  aso_crater_map.html  aso_crater_spur.gpx  build_aso_crater.py  build_final_route.py  build_overlay_db.py  config.py  decision_card.md  difficulty.py  elevation.py  enjoyment_scenarios.py  fetch_strava_walks.py  geo.py  grade_impact.py  graft_nagasaki.py  handdrawn_analysis.json  handdrawn_loop_analysis.json  itinerary_handdrawn.md  kyuhachi_nagasaki_loop.gpx  logistics_overlay.py  new_onsens_staged.json  onsen_model.py  osrm.py  pipeline.py  remap_nagasaki_loop.py  route_elevation.json  route_nagasaki_loop_map.html  simulate.py  strava_walk_summary.json
tests/: test_apply_add.py  test_backfill_data_verified_at.py  (+12 more)
(+83 files in other folders)
